FIX: Add new chat threads icon and move thread list button to right (#21575)
* DEV: add new thread icon

* FIX: Use new thread icon, fix typo in SVG

UX: move the thread list icon to the right of
the collapse button

---------

Co-authored-by: Martin Brennan <martin@discourse.org>

--- a/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/thread-list-button.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/thread-list-button.hbs
@@ -5,5 +5,5 @@
   class="open-thread-list-btn btn btn-flat"
   {{on "click" this.stopPropagation}}
 >
-  {{d-icon "comments"}}
+  {{d-icon "discourse-threads"}}
 </LinkTo>
