--- a/plugins/chat/assets/javascripts/discourse/components/chat-full-page-header.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-full-page-header.hbs
@@ -31,17 +31,6 @@
 
       {{#if (or @channel.threadingEnabled this.site.desktopView)}}
         <div class="chat-full-page-header__right-actions">
-          {{#if @channel.threadingEnabled}}
-            <LinkTo
-              @route="chat.channel.threads"
-              @models={{@channel.routeModels}}
-              title={{i18n "chat.threads.list"}}
-              class="open-thread-list-btn btn btn-flat"
-            >
-              {{d-icon "comments"}}
-            </LinkTo>
-          {{/if}}
-
           {{#if this.site.desktopView}}
             <DButton
               @icon="discourse-compress"
@@ -49,6 +38,17 @@
               class="open-drawer-btn btn-flat no-text"
               @action={{@onCloseFullScreen}}
             />
+          {{/if}}
+
+          {{#if @channel.threadingEnabled}}
+            <LinkTo
+              @route="chat.channel.threads"
+              @models={{@channel.routeModels}}
+              title={{i18n "chat.threads.list"}}
+              class="open-thread-list-btn btn btn-flat"
+            >
+              {{d-icon "discourse-threads"}}
+            </LinkTo>
           {{/if}}
         </div>
       {{/if}}
