FIX: Drawer styles for chat thread icon (#21577)
The spacing was not correct for this icon
in the drawer.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/thread-list-button.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/thread-list-button.hbs
@@ -2,7 +2,7 @@
   @route="chat.channel.threads"
   @models={{this.chat.activeChannel.routeModels}}
   title={{i18n "chat.threads.list"}}
-  class="open-thread-list-btn btn btn-flat"
+  class="open-thread-list-btn btn btn-link btn-flat chat-drawer-header__thread-list-btn"
   {{on "click" this.stopPropagation}}
 >
   {{d-icon "discourse-threads"}}
