DEV: Rearchitect chat tracking state (#21550)
This moves chat tracking state calculation for channels
and threads into a central Chat::TrackingStateManager service, that
serves a similar purpose to the TopicTrackingState model
in core.

This service calls down to these query classes:

* ThreadUnreadsQuery
* ChannelUnreadsQuery

To get the unread_count and mention_count for the appropriate
channels and threads.

As well as this, this commit refactors the client-side chat
tracking state.

Now, there is a central ChatTrackingStateManager Ember Service
so all tracking is accessible and can be counted from one place,
which can also initialize tracking from an initial payload.

The actual tracking counts are now maintained in a ChatTrackingState
class that is initialized on the `.tracking` property of both channel and
thread objects.

This removes the attributes on UserChatChannelMembership and decoration
of said membership from ChannelFetcher, preferring instead to have an additional
object for tracking in the JSON.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/channel-title.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/channel-title.hbs
@@ -21,9 +21,9 @@
     >
       <div class="chat-drawer-header__top-line">
         <ChatChannelTitle @channel={{@channel}}>
-          {{#if @channel.currentUserMembership.unreadCount}}
+          {{#if @channel.tracking.unreadCount}}
             <span class="chat-unread-count">
-              {{@channel.currentUserMembership.unreadCount}}
+              {{@channel.tracking.unreadCount}}
             </span>
           {{/if}}
         </ChatChannelTitle>
