--- a/plugins/chat/assets/javascripts/discourse/components/chat-channel-unread-indicator.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-channel-unread-indicator.hbs
@@ -1,16 +1,15 @@
-{{#if (gt @channel.currentUserMembership.unreadCount 0)}}
+{{#if (gt @channel.tracking.unreadCount 0)}}
   <div
     class={{concat-class
       "chat-channel-unread-indicator"
       (if
         (or
-          @channel.isDirectMessageChannel
-          (gt @channel.currentUserMembership.unreadMentions 0)
+          @channel.isDirectMessageChannel (gt @channel.tracking.mentionCount 0)
         )
         "urgent"
       )
     }}
   >
-    <div class="number">{{@channel.currentUserMembership.unreadCount}}</div>
+    <div class="number">{{@channel.tracking.unreadCount}}</div>
   </div>
 {{/if}}
