--- a/plugins/chat/assets/javascripts/discourse/components/chat-composer-dropdown.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-composer-dropdown.hbs
@@ -1,11 +1,14 @@
 {{#if @buttons.length}}
-  <DButton
-    @disabled={{@isDisabled}}
-    @class="chat-composer-dropdown__trigger-btn btn-flat btn-icon"
-    @title="chat.composer.toggle_toolbar"
-    @icon={{if @hasActivePanel "times" "plus"}}
-    @action={{this.toggleExpand}}
+  <Chat::Composer::Button
+    {{on "click" this.toggleExpand}}
+    @icon="plus"
+    title={{i18n "chat.composer.toggle_toolbar"}}
+    disabled={{@isDisabled}}
     {{did-insert this.setupTrigger}}
+    class={{concat-class
+      "chat-composer-dropdown__trigger-btn"
+      (if @hasActivePanel "has-active-panel")
+    }}
   />
 
   {{#if this.isExpanded}}
@@ -22,7 +25,7 @@
               button.id
             }}
             @icon={{button.icon}}
-            @action={{(fn this.onButtonClick button)}}
+            @action={{fn this.onButtonClick button}}
             @label={{button.label}}
           />
         </li>
