--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -14,6 +14,7 @@
 @import "chat-composer-upload";
 @import "chat-composer-uploads";
 @import "chat-composer";
+@import "chat-composer-button";
 @import "chat-draft-channel";
 @import "chat-drawer";
 @import "chat-emoji-picker";
