--- a/plugins/chat/assets/stylesheets/common/chat-height-mixin.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-height-mixin.scss
@@ -1,10 +1,9 @@
-@mixin chat-height {
+@mixin chat-height($inset: 0px) {
   // desktop and mobile
   height: calc(
     var(--chat-vh, 1vh) * 100 - var(--header-offset, 0px) -
       var(--chat-draft-header-height, 0px) -
-      var(--chat-direct-message-creator-height, 0px) -
-      env(safe-area-inset-bottom)
+      var(--chat-direct-message-creator-height, 0px) - $inset
   );
 
   // mobile with keyboard opened
@@ -21,8 +20,7 @@
     height: calc(
       var(--chat-vh, 1vh) * 100 - var(--header-offset, 0px) -
         var(--footer-nav-height, 0px) - var(--chat-draft-header-height, 0px) -
-        var(--chat-direct-message-creator-height, 0px) -
-        env(safe-area-inset-bottom)
+        var(--chat-direct-message-creator-height, 0px)
     );
   }
 
