--- a/plugins/chat/assets/stylesheets/common/chat-threads-list.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-threads-list.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  @include chat-height;
+  @include chat-height(env(safe-area-inset-bottom));
 
   &__items {
     overflow-y: scroll;
