FIX: followups to composer notch adjustments (#21592)
We had safe-area-inset-bottom still set at a wrong place which was causing issues but was also useful to some cases. This commit removes it and ensures the affected cases are corrected.

--- a/plugins/chat/assets/stylesheets/common/chat-browse.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-browse.scss
@@ -1,7 +1,7 @@
 .chat-browse-view {
   position: relative;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 1rem 1rem env(safe-area-inset-bottom) 1rem;
 
   &__header {
     display: flex;
