FIX: compensate for lack of replying indicator on draft (#21597)
As we don't have the spacing generated by the replying indicator, we need to manually add spacing.

--- a/plugins/chat/assets/stylesheets/common/chat-draft-channel.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-draft-channel.scss
@@ -37,7 +37,9 @@
     }
   }
 
-  .chat-composer__wrapper {
-    padding-bottom: 0.5em;
+  .ios-device.keyboard-visible & {
+    .chat-composer__wrapper {
+      padding-bottom: 1rem;
+    }
   }
 }
