--- a/app/assets/javascripts/discourse/app/components/sidebar/anonymous/sections.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/anonymous/sections.hbs
@@ -1,5 +1,5 @@
 <div class="sidebar-sections sidebar-sections-anonymous">
-  <Sidebar::Anonymous::CustomSections />
+  <Sidebar::Anonymous::CustomSections @collapsable={{@collapsableSections}} />
   <Sidebar::Anonymous::CategoriesSection
     @collapsable={{@collapsableSections}}
   />
