--- a/app/assets/javascripts/discourse/app/components/sidebar/common/custom-sections.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/common/custom-sections.hbs
@@ -1,5 +1,8 @@
 <div class="sidebar-custom-sections">
   {{#each this.sections as |section|}}
-    <Sidebar::Common::CustomSection @sectionData={{section}} />
+    <Sidebar::Common::CustomSection
+      @sectionData={{section}}
+      @collapsable={{@collapsable}}
+    />
   {{/each}}
 </div>
