FIX: ensures chat composer docks to topic composer (#21610)

--- a/plugins/chat/assets/stylesheets/common/chat-height-mixin.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-height-mixin.scss
@@ -3,7 +3,8 @@
   height: calc(
     var(--chat-vh, 1vh) * 100 - var(--header-offset, 0px) -
       var(--chat-draft-header-height, 0px) -
-      var(--chat-direct-message-creator-height, 0px) - $inset
+      var(--chat-direct-message-creator-height, 0px) -
+      var(--composer-height, 0px) - $inset
   );
 
   // mobile with keyboard opened
@@ -20,7 +21,8 @@
     height: calc(
       var(--chat-vh, 1vh) * 100 - var(--header-offset, 0px) -
         var(--footer-nav-height, 0px) - var(--chat-draft-header-height, 0px) -
-        var(--chat-direct-message-creator-height, 0px)
+        var(--chat-direct-message-creator-height, 0px) -
+        var(--composer-height, 0px)
     );
   }
 
