--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/list-item.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/list-item.hbs
@@ -20,10 +20,7 @@
           />
         </div>
       </div>
-      <Chat::Thread::OriginalMessage
-        @thread={{@thread}}
-        @message={{@thread.originalMessage}}
-      />
+      <Chat::Thread::OriginalMessage @message={{@thread.originalMessage}} />
     </div>
   </div>
 </div>
