--- a/plugins/styleguide/assets/javascripts/discourse/templates/styleguide.hbs
+++ b/plugins/styleguide/assets/javascripts/discourse/templates/styleguide.hbs
@@ -1,5 +1,6 @@
 <section class="styleguide">
   <section class="styleguide-menu">
+    <ToggleColorMode />
     {{#each this.categories as |c|}}
       <ul>
         <li class="styleguide-heading">{{i18n
