UX: Improve display of short site description in header dropdown (#21628)

--- a/app/assets/javascripts/discourse/app/components/sidebar/common/custom-section.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/common/custom-section.hbs
@@ -5,14 +5,8 @@
   @headerActions={{this.section.headerActions}}
   @headerActionsIcon={{this.section.headerActionIcon}}
   @class={{this.section.dragCss}}
+  @sectionDescription={{this.section.description}}
 >
-
-  {{#if this.section.displayShortSiteDescription}}
-    <Sidebar::SectionMessage>
-      {{this.siteSettings.short_site_description}}
-    </Sidebar::SectionMessage>
-  {{/if}}
-
   {{#each this.section.links as |link|}}
     {{#if link.shouldDisplay}}
       {{#if link.external}}
