--- a/app/assets/stylesheets/desktop/menu-panel.scss
+++ b/app/assets/stylesheets/desktop/menu-panel.scss
@@ -52,6 +52,10 @@
         }
       }
     }
+
+    .sidebar-section-message {
+      padding: 0;
+    }
   }
 
   .sidebar-custom-sections .d-icon-globe {
