--- a/plugins/styleguide/assets/javascripts/discourse/components/toggle-color-mode.hbs
+++ b/plugins/styleguide/assets/javascripts/discourse/components/toggle-color-mode.hbs
@@ -1,1 +1,3 @@
-<DButton @action={{this.toggle}} class="toggle-color-mode">Toggle color</DButton>
+{{#if this.shouldRender}}
+  <DButton @action={{this.toggle}} class="toggle-color-mode">Toggle color</DButton>
+{{/if}}
