UX: minor fix with new composer and reply/edit (#21634)

--- a/plugins/chat/assets/stylesheets/common/chat-composer.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-composer.scss
@@ -171,8 +171,7 @@
 }
 
 .chat-composer-message-details {
-  padding: 0.5rem 0.75rem;
-  border-top: 1px solid var(--primary-low);
+  padding: 0 0.75rem 0.5rem;
   display: flex;
   align-items: center;
 
