UX: General chat composer tweaks (#21639)
- prevent hover on disabled state
- more contrast between focus and not focus for send button

--- a/plugins/chat/assets/stylesheets/common/chat-composer-dropdown.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-composer-dropdown.scss
@@ -6,6 +6,17 @@
   }
 }
 
+.chat-composer.is-disabled {
+  .no-touch & {
+    .chat-composer-dropdown__trigger-btn:hover {
+      cursor: default;
+      .d-icon {
+        color: var(--primary-low-mid);
+      }
+    }
+  }
+}
+
 .chat-composer-dropdown__trigger-btn {
   .d-icon {
     padding: 5px;
@@ -13,6 +24,10 @@
     color: var(--primary-high);
     background: var(--secondary-very-high);
     border-radius: 100%;
+
+    .is-disabled & {
+      color: var(--primary-low-mid);
+    }
   }
 
   .no-touch & {
