--- a/app/assets/javascripts/discourse/app/templates/login.hbs
+++ b/app/assets/javascripts/discourse/app/templates/login.hbs
@@ -2,9 +2,13 @@
   <div class="contents clearfix body-page">
     <div class="login-welcome">
       <PluginOutlet @name="above-login" @outletArgs={{hash model=this.model}} />
+      <PluginOutlet @name="above-static" />
+
       <div class="login-content">
         {{html-safe this.model.html}}
       </div>
+
+      <PluginOutlet @name="below-static" />
       <PluginOutlet @name="below-login" @outletArgs={{hash model=this.model}} />
 
       <div class="body-page-button-container">
