DEV: Fix random typos (#21638)

--- a/plugins/chat/assets/javascripts/discourse/components/chat-channel-metadata.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-channel-metadata.hbs
@@ -1,6 +1,6 @@
 <div class="chat-channel-metadata">
   <div class="chat-channel-metadata__date">
-    {{this.lastMessageFormatedDate}}
+    {{this.lastMessageFormattedDate}}
   </div>
 
   {{#if this.unreadIndicator}}
