--- a/plugins/chat/assets/stylesheets/common/chat-message-left-gutter.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-message-left-gutter.scss
@@ -8,7 +8,7 @@
 
 .chat-message-container:hover .chat-message-left-gutter {
   .chat-time {
-    color: var(--secondary-mediumy);
+    color: var(--secondary-medium);
   }
 }
 
