UX: tweak on logo size to make sure it's not too small on small screen (#21644)

--- a/app/assets/stylesheets/common/base/static-login.scss
+++ b/app/assets/stylesheets/common/base/static-login.scss
@@ -11,15 +11,16 @@ body.static-login {
 
   .logo-container {
     border-bottom: 1px solid var(--primary-low);
-    padding-bottom: 2em;
-    margin-bottom: 2em;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+    display: block;
   }
 
   .site-logo {
-    height: var(--d-logo-height);
     width: auto;
-    max-width: 40%;
     object-fit: contain;
+    max-width: 60%;
+    max-height: 150px;
   }
 
   .waving-hand {
