DEV: add plugin outlet to share sources (#21646)

--- a/app/assets/javascripts/discourse/app/templates/modal/share-topic.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/share-topic.hbs
@@ -67,6 +67,10 @@
             />
           {{/if}}
         {{/if}}
+        <PluginOutlet
+          @name="share-topic-sources"
+          @outletArgs={{hash topic=this.topic post=this.post}}
+        />
       </div>
     </div>
   </form>
