UX: add indicator for msg from currentUser (#21657)
* UX: add indicator for msg from currentUser

* move up a level

--- a/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
@@ -21,6 +21,7 @@
       "chat-message-container"
       (if this.pane.selectingMessages "selecting-messages")
       (if @message.highlighted "highlighted")
+      (if (eq @message.user.id this.currentUser.id) "is-by-current-user")
     }}
     data-id={{@message.id}}
     data-thread-id={{@message.thread.id}}
