--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -10,7 +10,6 @@
 @import "chat-channel-settings-saved-indicator";
 @import "chat-channel-title";
 @import "chat-composer-dropdown";
-@import "chat-composer-inline-button";
 @import "chat-composer-upload";
 @import "chat-composer-uploads";
 @import "chat-composer";
@@ -52,3 +51,4 @@
 @import "chat-thread-list-item";
 @import "chat-threads-list";
 @import "chat-thread-original-message";
+@import "chat-composer-separator";
