--- a/plugins/chat/assets/stylesheets/common/chat-composer.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-composer.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     z-index: 3;
     background-color: var(--primary-very-low);
-    padding: 12px 10px env(safe-area-inset-bottom) 10px;
+    padding: 0.5rem 0 env(safe-area-inset-bottom) 0;
 
     .keyboard-visible & {
       padding-bottom: 0;
@@ -22,7 +22,7 @@
 
   .chat-composer-button,
   .chat-composer-separator {
-    align-self: stretch;
+    align-self: flex-end;
   }
 
   &__outer-container {
@@ -30,6 +30,19 @@
     align-items: center;
     box-sizing: border-box;
     width: 100%;
+    padding-inline: 1rem;
+  }
+
+  &__inline-button {
+    .d-icon {
+      color: var(--primary-medium);
+    }
+
+    &:hover {
+      .d-icon {
+        color: var(--primary);
+      }
+    }
   }
 
   &__inner-container {
@@ -85,6 +98,7 @@
 
     .d-icon {
       background: none !important;
+      color: var(--primary);
     }
 
     .chat-composer.is-send-enabled & {
@@ -122,10 +136,6 @@
         background: none !important;
       }
     }
-
-    .d-icon {
-      color: var(--primary);
-    }
   }
 
   &__input-container {
@@ -136,6 +146,11 @@
     align-self: stretch;
   }
 
+  --100dvh: 100vh;
+  @supports (height: 100dvh) {
+    --100dvh: 100dvh;
+  }
+
   &__input {
     overflow-x: hidden;
     width: 100%;
@@ -143,13 +158,17 @@
     outline: none;
     border: 0;
     resize: none;
-    max-height: 125px;
+    max-height: calc(
+      (
+          var(--100dvh) - var(--header-offset, 0px) -
+            var(--chat-header-offset, 0px)
+        ) / 100 * 25
+    );
     background: none;
-    margin: 0;
     padding: 0;
+    margin: 5px 0;
     text-overflow: ellipsis;
     cursor: inherit;
-
     @include chat-scrollbar();
 
     &[disabled] {
