FIX: correct replying indicator padding (#21679)

--- a/plugins/chat/assets/stylesheets/common/chat-composer.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-composer.scss
@@ -18,6 +18,10 @@
     .drop-a-file {
       display: none;
     }
+
+    .chat-replying-indicator {
+      padding-inline: 1rem;
+    }
   }
 
   .chat-composer-button,
