FIX: keeps panel size when changing content (#21698)
Before this commit the following actions would have shown the issue:
- visit a thread
- changes the width of the side panel
- open threads list
- the size has reverted to previous state

This was caused by the width change to not correctly be tracked.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-side-panel.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-side-panel.hbs
@@ -9,7 +9,7 @@
     }}
     style={{if
       (and this.site.desktopView this.chatStateManager.isFullPageActive)
-      this.width
+      this.widthStyle
     }}
   >
     {{yield}}
