--- a/plugins/chat/assets/javascripts/discourse/components/chat-side-panel.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-side-panel.hbs
@@ -1,7 +1,7 @@
 {{#if this.chatStateManager.isSidePanelExpanded}}
   <div
     class="chat-side-panel"
-    {{did-insert this.setSidePanel}}
+    {{did-insert this.setupSize}}
     {{chat/resizable-node
       ".chat-side-panel-resizer"
       this.didResize
