--- a/app/assets/javascripts/discourse/app/components/sidebar/anonymous/tags-section.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/anonymous/tags-section.hbs
@@ -12,6 +12,7 @@
         @currentWhen={{sectionLink.currentWhen}}
         @prefixType={{sectionLink.prefixType}}
         @prefixValue={{sectionLink.prefixValue}}
+        @prefixColor={{sectionLink.prefixColor}}
         @models={{sectionLink.models}}
         data-tag-name={{sectionLink.tagName}}
       />
