FEATURE: Add user status to inline mentions in chat (#20564)
This PR adds status to mentions in chat and makes those mentions receive live updates.

There are known unfinished part in this implementation: when posting a message, status on mentions on that message appears immediately, but only if a user used autocomplete when typing the message. If user copy and paste a message with mentions into chat composer, those mentions won't have user status on them.

PRs with fixes for both problems are following soon.

Preparations for this PR that were made previously include:
- DEV: correct a relationship – a chat message may have several mentions 0dcfd7ddeccd438fed97c15827214a3ddd944838
- DEV: extract the logic for extracting and expanding mentions from ChatNotifier 75b81b6854087842b53b4c9559ef5836d9516269
- DEV: Always create chat mention records fa543cda06594b5bebe0ab35e48e613540f9d3dc
- DEV: better split create_notification! and send_notifications logic e292c45924bb0b0a79497e5f494afcb8af2e1efc
- DEV: more tests for mentions when updating chat messages e7292e1682bb910635af26879c31a17b8843b738
- DEV: extract updating status on mentions into a lib function e49d338c21885189970e51a60ac79ab8c1fc397e
- DEV: Create and update chat message mentions earlier 35a414bb38b2ab990ff920f8c3adf2f877249f12
- DEV: Create a chat_mention record when self mentioning 2703f2311aefd87a7774316b50f5339626ea5b48
- DEV: When deleting a chat message, do not delete mention records f4fde4e49b03d5e8f01d02e2354c553c82f3402d

--- a/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
@@ -60,6 +60,9 @@
         </div>
       {{else}}
         <div
+          {{did-insert this.refreshStatusOnMentions}}
+          {{did-update this.refreshStatusOnMentions @message.version}}
+          {{did-update this.initMentionedUsers @message.version}}
           class={{concat-class
             "chat-message"
             (if @message.staged "chat-message-staged" "chat-message-persisted")
