--- a/app/assets/stylesheets/common/base/sidebar-custom-section.scss
+++ b/app/assets/stylesheets/common/base/sidebar-custom-section.scss
@@ -4,14 +4,13 @@
   }
   .sidebar-section-header {
     position: relative;
-  }
-  .d-icon-globe {
-    position: absolute;
-    left: -0.75em;
-    height: 0.75em;
-    width: 0.75em;
-    margin-top: 0.15em;
-    align-items: center;
+    .d-icon-globe {
+      position: absolute;
+      left: -0.75em;
+      align-self: stretch;
+      width: 0.6em;
+      height: 100%;
+    }
   }
 
   .sidebar-section-link-prefix.icon {
