DEV: implements initial messages component (#21727)
This should also make `message_notifications_with_sidebar_spec.rb` more resilient as we are now checking for `is-persisted` class instead of checking for the absence of `is-staged`.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
@@ -22,6 +22,7 @@
       (if this.pane.selectingMessages "selecting-messages")
       (if @message.highlighted "highlighted")
       (if (eq @message.user.id this.currentUser.id) "is-by-current-user")
+      (if @message.staged "is-staged" "is-persisted")
     }}
     data-id={{@message.id}}
     data-thread-id={{@message.thread.id}}
@@ -65,7 +66,6 @@
           {{did-update this.initMentionedUsers @message.version}}
           class={{concat-class
             "chat-message"
-            (if @message.staged "chat-message-staged" "chat-message-persisted")
             (if @message.deletedAt "deleted")
             (if (and @message.inReplyTo (not this.hideReplyToInfo)) "is-reply")
             (if this.showThreadIndicator "is-threaded")
