FEATURE: Create legal topics for set company name (#21620)
Legal topics, such as the Terms of Service and Privacy Policy topics
do not make sense if the entity creating the community is not a company.
These topics will be created and updated only when the company name is
present and deleted when it is not.

--- a/app/assets/javascripts/discourse/app/templates/about.hbs
+++ b/app/assets/javascripts/discourse/app/templates/about.hbs
@@ -18,12 +18,16 @@
                 "faq"
               }}</LinkTo></li>
         {{/if}}
-        <li class="nav-item-tos"><LinkTo @route="tos">{{i18n
-              "tos"
-            }}</LinkTo></li>
-        <li class="nav-item-privacy"><LinkTo @route="privacy">{{i18n
-              "privacy"
-            }}</LinkTo></li>
+        {{#if (gt this.siteSettings.tos_topic_id 0)}}
+          <li class="nav-item-tos"><LinkTo @route="tos">{{i18n
+                "tos"
+              }}</LinkTo></li>
+        {{/if}}
+        {{#if (gt this.siteSettings.privacy_topic_id 0)}}
+          <li class="nav-item-privacy"><LinkTo @route="privacy">{{i18n
+                "privacy"
+              }}</LinkTo></li>
+        {{/if}}
       </ul>
 
       <section class="about description">
