FIX: correctly nullifies active message (#21739)
Very fast or specific mouse moves could allow to leave a message actions menu without reseting the active message. This commit should ensure we correctly catch this event.

No test as it's hard and not reliable to reproduce these in a test.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-message-actions-desktop.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message-actions-desktop.hbs
@@ -2,6 +2,7 @@
   <div
     {{did-insert this.setup}}
     {{did-update this.setup this.chat.activeMessage.model.id}}
+    {{on "mouseleave" this.onMouseleave}}
     {{will-destroy this.teardown}}
     class={{concat-class
       "chat-message-actions-container"
