FEATURE: Apply hashtag styles to autocomplete (#21731)
This commit uses improvements done in 0b3cf83 to apply these styles to the autocomplete in composer.

--- a/app/assets/stylesheets/common/components/hashtag.scss
+++ b/app/assets/stylesheets/common/components/hashtag.scss
@@ -90,8 +90,15 @@ a.hashtag-cooked {
     }
 
     .d-icon {
-      color: var(--primary-medium);
       margin-right: 0.25em;
+    }
+
+    .hashtag-category-badge {
+      flex: 0 0 auto;
+      width: 15px;
+      height: 15px;
+      margin-right: 5px;
+      display: inline-block;
     }
   }
 
