--- a/plugins/chat/assets/javascripts/discourse/components/chat-thread.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-thread.hbs
@@ -25,7 +25,7 @@
   <div
     class="chat-thread__body popper-viewport"
     {{did-insert this.setScrollable}}
-    {{on "scroll" this.resetActiveMessage passive=true}}
+    {{on "scroll" this.computeScrollState passive=true}}
   >
     <div
       class="chat-thread__messages chat-messages-container"
