--- a/plugins/chat/assets/stylesheets/common/chat-threads-list.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-threads-list.scss
@@ -16,6 +16,10 @@
     .chat-thread-list-item {
       margin: 0.75rem 0.25rem 0.75rem 0.5rem;
 
+      &.-unread {
+        border-left: 2px solid var(--tertiary-medium);
+      }
+
       & + .chat-thread-list-item {
         margin-top: 0;
       }
