--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -52,3 +52,4 @@
 @import "chat-threads-list";
 @import "chat-thread-original-message";
 @import "chat-composer-separator";
+@import "chat-thread-header-button";
