--- a/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/right-actions.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-drawer/header/right-actions.hbs
@@ -1,7 +1,7 @@
 <div class="chat-drawer-header__right-actions">
   <div class="chat-drawer-header__top-line">
     {{#if this.chat.activeChannel.threadingEnabled}}
-      <ChatDrawer::Header::ThreadListButton />
+      <Chat::Thread::ThreadsListButton @channel={{this.chat.activeChannel}} />
     {{/if}}
 
     <ChatDrawer::Header::ToggleExpandButton
