--- a/plugins/chat/assets/stylesheets/common/chat-drawer.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-drawer.scss
@@ -248,6 +248,10 @@ a.chat-drawer-header__title {
       }
     }
   }
+
+  &__thread-list-btn.-has-unreads {
+    margin-right: 0.5rem;
+  }
 }
 
 .chat-drawer-content {
