--- a/app/assets/stylesheets/desktop/menu-panel.scss
+++ b/app/assets/stylesheets/desktop/menu-panel.scss
@@ -11,7 +11,7 @@
 // Sidebar-hamburger hybrid
 
 .hamburger-panel .revamped {
-  --d-sidebar-highlight-color: var(--highlight-medium);
+  --d-sidebar-highlight-color: var(--d-hover);
   --d-sidebar-row-horizontal-padding: 0.5rem;
   --d-sidebar-row-height: 30px;
   // 1.25rem gets text left-aligned with the hamburger icon
@@ -30,8 +30,7 @@
 
     .sidebar-section-link.active {
       font-weight: normal;
-      color: var(--primary-high);
-      background: var(--tertiary-low);
+      background: var(--d-hover);
     }
 
     .sidebar-section-header-wrapper .select-kit .btn:hover {
