UX: minor active state fix for sidebar (#21754)

--- a/app/assets/stylesheets/common/base/sidebar-section-link.scss
+++ b/app/assets/stylesheets/common/base/sidebar-section-link.scss
@@ -26,7 +26,7 @@
       background: var(--d-sidebar-highlight-color);
 
       .sidebar-section-link-prefix {
-        &.icon svg {
+        &.icon {
           color: var(--primary-medium);
         }
       }
