UI: minor spacing adjustment in message details (#21761)

--- a/plugins/chat/assets/stylesheets/common/chat-composer.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-composer.scss
@@ -191,7 +191,7 @@
 }
 
 .chat-composer-message-details {
-  padding: 0 0.75rem 0.5rem;
+  margin: 0 1rem 0.5rem 1rem;
   display: flex;
   align-items: center;
 
