--- a/app/assets/stylesheets/common/base/sidebar-custom-section.scss
+++ b/app/assets/stylesheets/common/base/sidebar-custom-section.scss
@@ -16,6 +16,10 @@
   .sidebar-section-link-prefix.icon {
     cursor: move;
   }
+  .sidebar-section[data-section-name="community"]
+    .sidebar-section-link-prefix.icon {
+    cursor: pointer;
+  }
 
   a {
     -webkit-touch-callout: none !important;
